[#45] 주문 서비스 조회 기능 개선, 메뉴 및 메뉴그룹 컨트롤러 개발 (#49)
* feat: 주문 엔티티에 BaseTimeEntity와의 상속 관계 추가

* feat: 주문 엔티티의 할인 금액을 쿠폰, 포인트 사용 두가지 경우를 분리하여 관리

* fix: 주문 엔티티 columnDefinition 속성에 자료형 명시가 누락되어 테이블이 생성되지 못한 문제 수정

* feat: 주문 엔티티와 딜리버리 엔티티 양방향 매핑

* feat: 주문 서비스 조회 기능 개선(기간별 조회, 페이징) 및 컨트롤러와 통신에 DTO를 사용하는 방식으로 변경

* feat: 주문 서비스에 기간별 가게의 주문 횟수와 매출 정보를 조회하는 기능 추가

* refactor: 주문 서비스의 주문 생성 메서드 파라미터로 DTO를 사용하는 방식으로 변경

* feat: 주문 서비스의 고객측 주문 리스트 조회 응답 데이터를 실제 배달의 민족 앱과 유사한 형태로 수정

* feat: 주문 서비스 단건 조회 기능 개발 및 테스트

* feat: MenuStatus 직렬화/역직렬화에 사용될 필드 추가

* feat: 메뉴 서비스에서 컨트롤러와 통신에 DTO를 사용하는 방식으로 변경

* feat: 메뉴그룹 서비스에서 컨트롤러와 통신에 DTO를 사용하는 방식으로 변경

* feat: 레스토랑의 메뉴 그룹 리스트 조회 메서드 추가

* feat: 메뉴그룹 서비스에 DTO로 단건 조회하는 메서드 추가

* feat: 메뉴 엔티티 BaseTimeEntity 상속

* refactor: 메뉴 서비스에서 대표 메뉴 설정을 업데이트하는 방식을 변경

* fix: 단일 필드를 가진 클래스의 경우 Jackson 라이브러리를 사용하여 역직렬화를 할 수 없던 문제 수정

단일 필드를 가진 클래스의 경우 직접 생성자를 만들어주고 @JsonProperty 애노테이션을 선언해줘야 한다.

* feat: 메뉴 컨트롤러 개발 및 테스트 코드 작성

* feat: 메뉴그룹 엔티티 BaseTimeEntity 상속

* feat: 메뉴그룹 컨트롤러 개발 및 테스트 코드 작성

* refactor: DTO 클래스 필드에 final 키워드 적용

* refactor: 주문 생성과 취소 시에 기존 코드에서는 회원의 포인트 사용만 처리되었지만, 포인트 적립까지 처리되도록 변경

* feat: 주문 엔티티에 고객 배달 주소 필드 추가

* feat: 배달 지역 서비스에 레스토랑의 특정 지역 배달비 조회 메서드 추가

* feat: 주문 엔티티가 배달비를 가지고 있도록 변경

* feat: 주문 수락시 해당 주문에 대한 배달이 생성되도록 함

* refactor: 주문 관련 DTO 클래스의 필드에 final 키워드 사용

* feat: 에러 메시지 추가

* fix: 날짜 관련 데이터를 직렬화/역직렬화 할 수 없었던 문제 해결

* refactor: 주문 수락 서비스 메서드에서 조리 예상 시간을 DTO를 통해 받도록 변경

* fix: 주문 통계 조회시 주문이 없을 경우 정수 필드에 null이 들어오던 문제를 수정

* feat: RestDocs 문서화 시에 JSON 요청, 응답 바디 포멧팅 설정 추가

* feat: RestDocs를 사용한 메뉴 관련 API 문서화

* feat: RestDocs를 사용한 메뉴그룹 관련 API 문서화

* feat: MenuMapper 개발

* feat: MenuGroupMapper 테스트 코드 작성

* feat: CartMapper, OrderMapper 개발 및 테스트 코드 작성(OrderMapper.toOrder 미구현)

* style: 주문 서비스 사용하지 않는 의존성 삭제

* test: 주문 서비스 테스트 코드 깨지던 부분 수정

* feat: 배달 생성시 주문과의 양방향 매핑 생성

* fix: 배달 생성시 레스토랑 주소가 배달지 주소로 잘못 저장되었던 문제 수정

* feat: 주문 컨